--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@docusaurus/module-type-aliases": "3.2.0",
     "@docusaurus/tsconfig": "3.2.0",
     "@docusaurus/types": "3.2.0",
+    "@playwright/test": "^1.42.1",
+    "@types/node": "^20.12.2",
     "typescript": "~5.2.2"
   },
   "browserslist": {
